--- a/react-app/package.json
+++ b/react-app/package.json
@@ -2,7 +2,7 @@
     "name": "demo-ott-app",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://macrometacorp.github.io/demo-ott-app",
+    "homepage": "https://macrometacorp.github.io/demo-ott-app/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
