Update asset fallback image. Use env. vars to instantiate jsc8 client. Rename asset_credit_view to asset_ott_credit_view in react-app/src/requests.js.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ test.js
 .env.gdn
 .DS_Store
 
+/react-app/.env.development.local
+/react-app/.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
